# load('//tooling/codegen/proto:proto.bzl', 'uber_proto_java_library') instead if you want only proto
load("//tooling/codegen/proto:proto.bzl", "uber_grpc_java_library", "uber_proto_java_library")

PROTO_SRCS = glob(["**/*.proto"])

uber_proto_java_library(
    name = "proto_main",
    srcs = PROTO_SRCS,
)

# add this if you want grpc in addition to proto
uber_grpc_java_library(
    name = "grpc_main",
    srcs = PROTO_SRCS,
    proto_library = ":proto_main",
)
